LinKreta_POC_Repository/force-app/main/default/objects/SF_EXPENSE_SHEET__x/SF_EXPENSE_SHEET__x.object-meta.xml
<CustomObject>
    <description>SF_EXPENSE_SHEET</description>
    <externalDataSource>WCGT_Integration</externalDataSource>
    <externalName>SF_EXPENSE_SHEET</externalName>
    <label>Business Development Expense Cost Spent</label>
    <pluralLabel>Business Development Expense Cost Spent</pluralLabel>
</CustomObject>