LinKreta_POC_Repository/force-app/main/default/objects/SF_EXPENSE_SHEET__x/fields/CLIENT_ID__c.field-meta.xml
<CustomField>
    <fullName>CLIENT_ID__c</fullName>
    <description>CLIENT_ID</description>
    <externalDeveloperName>CLIENT_ID</externalDeveloperName>
    <label>CLIENT_ID</label>
    <length>8</length>
    <referenceTargetField>Account.WCGTId__c</referenceTargetField>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Business Development Expense Cost Spent</relationshipLabel>
    <relationshipName>Business_Development_Expense_Cost_Spent</relationshipName>
    <type>IndirectLookup</type>
</CustomField>