LinKreta_POC_Repository/force-app/main/default/objects/SF_EXPENSE_SHEET__x/fields/CREATED_DATE__c.field-meta.xml
<CustomField>
    <fullName>CREATED_DATE__c</fullName>
    <description>CREATED_DATE</description>
    <externalDeveloperName>CREATED_DATE</externalDeveloperName>
    <label>Expense Created Date</label>
    <type>DateTime</type>
</CustomField>