LinKreta_POC_Repository/force-app/main/default/objects/SF_EXPENSE_SHEET__x/fields/Engagement_Leader__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Leader__c</fullName>
    <description>Engagement_Leader</description>
    <externalDeveloperName>Engagement_Leader</externalDeveloperName>
    <label>Engagement_Leader</label>
    <length>150</length>
    <type>Text</type>
</CustomField>