LinKreta_POC_Repository/force-app/main/default/objects/SF_EXPENSE_SHEET__x/fields/ENQ_SFID__c.field-meta.xml
<CustomField>
    <fullName>ENQ_SFID__c</fullName>
    <description>ENQ_SFID</description>
    <externalDeveloperName>ENQ_SFID</externalDeveloperName>
    <label>ENQ_SFID</label>
    <length>20</length>
    <referenceTargetField>Lead.leadID__c</referenceTargetField>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Business Development Expense Cost Spent</relationshipLabel>
    <relationshipName>Business_Development_Expense_Cost_Spent</relationshipName>
    <type>IndirectLookup</type>
</CustomField>