LinKreta_POC_Repository/force-app/main/default/objects/SF_EXPENSE_SHEET__x/fields/EXP_SHEET_AID__c.field-meta.xml
<CustomField>
    <fullName>EXP_SHEET_AID__c</fullName>
    <description>EXP_SHEET_AID</description>
    <externalDeveloperName>EXP_SHEET_AID</externalDeveloperName>
    <label>EXP_SHEET_AID</label>
    <length>12</length>
    <type>Text</type>
</CustomField>