LinKreta_POC_Repository/force-app/main/default/objects/SF_EXPENSE_SHEET__x/fields/EXP_SHEET_MID__c.field-meta.xml
<CustomField>
    <fullName>EXP_SHEET_MID__c</fullName>
    <description>EXP_SHEET_MID</description>
    <externalDeveloperName>EXP_SHEET_MID</externalDeveloperName>
    <label>EXP_SHEET_MID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>