LinKreta_POC_Repository/force-app/main/default/objects/SF_EXPENSE_SHEET__x/fields/EXPERTISE__c.field-meta.xml
<CustomField>
    <fullName>EXPERTISE__c</fullName>
    <description>EXPERTISE</description>
    <externalDeveloperName>EXPERTISE</externalDeveloperName>
    <label>EXPERTISE</label>
    <length>100</length>
    <type>Text</type>
</CustomField>