LinKreta_POC_Repository/force-app/main/default/objects/SF_EXPENSE_SHEET__x/fields/ITEM_DESC__c.field-meta.xml
<CustomField>
    <fullName>ITEM_DESC__c</fullName>
    <description>ITEM_DESC</description>
    <externalDeveloperName>ITEM_DESC</externalDeveloperName>
    <label>Expense Head</label>
    <length>100</length>
    <type>Text</type>
</CustomField>