LinKreta_POC_Repository/force-app/main/default/objects/SF_EXPENSE_SHEET__x/fields/Project_Name__c.field-meta.xml
<CustomField>
    <fullName>Project_Name__c</fullName>
    <description>Project_Name</description>
    <externalDeveloperName>Project_Name</externalDeveloperName>
    <label>Project_Name</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>