LinKreta_POC_Repository/force-app/main/default/objects/SF_EXPENSE_SHEET__x/fields/Revenue_Unit__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Unit__c</fullName>
    <description>Revenue_Unit</description>
    <externalDeveloperName>Revenue_Unit</externalDeveloperName>
    <label>Revenue_Unit</label>
    <length>100</length>
    <type>Text</type>
</CustomField>