LinKreta_POC_Repository/force-app/main/default/objects/SF_EXPENSE_SHEET__x/fields/SECTOR__c.field-meta.xml
<CustomField>
    <fullName>SECTOR__c</fullName>
    <description>SECTOR</description>
    <externalDeveloperName>SECTOR</externalDeveloperName>
    <label>SECTOR</label>
    <length>200</length>
    <type>Text</type>
</CustomField>