LinKreta_POC_Repository/force-app/main/default/objects/SF_EXPENSE_SHEET__x/fields/SETTLED_AMT__c.field-meta.xml
<CustomField>
    <fullName>SETTLED_AMT__c</fullName>
    <description>SETTLED_AMT</description>
    <externalDeveloperName>SETTLED_AMT</externalDeveloperName>
    <label>Expense Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>