LinKreta_POC_Repository/force-app/main/default/objects/SF_EXPENSE_SHEET__x/fields/SME__c.field-meta.xml
<CustomField>
    <fullName>SME__c</fullName>
    <description>SME</description>
    <externalDeveloperName>SME</externalDeveloperName>
    <label>SME</label>
    <length>200</length>
    <type>Text</type>
</CustomField>