LinKreta_POC_Repository/force-app/main/default/objects/SF_EXPENSE_SHEET__x/fields/Sub_sector__c.field-meta.xml
<CustomField>
    <fullName>Sub_sector__c</fullName>
    <description>Sub_sector_</description>
    <externalDeveloperName>Sub_sector_</externalDeveloperName>
    <label>Sub_sector_</label>
    <length>100</length>
    <type>Text</type>
</CustomField>